# moonxbt

./: README.md  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
contracts/: INFO.md  README.md  hardhat.config.ts  package.json
contracts/contracts/: TokenAuction.sol
contracts/deployments/: Bootstrap-baseSepolia-2026-03-20T05-15-05.974Z.json  TokenAuction-mainnet-2026-03-27T18-56-00.000Z.json  TokenAuction-mainnet-flattened.sol  base-mainnet.generated.env
contracts/moon-solana/: Anchor.toml  Cargo.toml  package.json
contracts/moon-solana/programs/token_auction_program/: Cargo.toml
contracts/moon-solana/programs/token_auction_program/src/: lib.rs
contracts/moon-solana/src/: lib.rs
contracts/scripts/: bootstrap-base-sepolia.ts  deploy-mock-erc20-sepolia.ts  deploy-token-auction-sepolia.ts  deploy-token-auction.ts  mint-mock-erc20-sepolia.ts  setup-token-auction-base.ts  setup-token-auction-sepolia.ts
contracts/test/: TokenAuction.ts  TokenAuctionIntegration.ts  test-config.ts
src/app/: globals.css  layout.tsx
src/components/: AirdropModal.tsx  AirdropParticipantsTable.tsx  Avatar.tsx  BidForm.tsx  MobileVideoDisplay.tsx  Spinner.tsx  TerminalHero.tsx  TerminalSnippet.tsx  VideoAuctionSheet.tsx  WagmiProvider.tsx  WinnerDashboard.tsx
src/config/: chainConfig.ts  privyConfig.ts  wagmiConfig.ts
src/constants/: contracts.ts
src/context/: index.tsx
src/hooks/: use-theme.ts  useApprove.ts  useAssets.ts  useAsyncRequest.ts  useAuctionData.ts  useBid.ts
src/lib/: admin-auth.ts  utils.ts  wagmi.ts
(+79 files in other folders)
